2010-05-13 Ali Erkan İMREK <alierkanimrek.gmail.com>
    * prepareIface.py: Issue 6 fixed.
2010-04-25 Version 0.3.3 Released
    * Paso information update is provided
    * If root directory is different from system root, raise error. Fixed.
    * Some tiny corrections
    * i18n functions added to setup utility
2010-04-25 Ali Erkan İMREK <alierkanimrek.gmail.com>
    * i18n functions added to setup utility
    * setup.py: i18n functions
2010-04-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
    * Paso information update is provided
    * main.py and main.ui: Add button and controls
    * prepareIface.py: Add updateInfo() proxy
    * pasofile.py: Add updateInfo() worker
2010-03-06 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * If root directory is different from system root, raise error. Fixed.
     * Some tiny corrections
2010-03-04 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Fixed corrupt unicode characters in the inputs
2010-02-28 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Write setup.py and build i18n files
     * Progress break feature added (need more testing)
     * Gui freezing problem solved
     * Change ProgressBar as a sub dialog
2010-01-16 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Fixed #Issue 5
2010-01-13 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Hybrid ISO feature #Issue 3
2009-12-17 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Repo size adding to metadata.xml
     * Calculate estimated ISO size
     * Some gui fix
2009-12-12 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Package sizes adding to files.xml
2009-11-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * Packager name and email saved conf file
2009-11-22 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * .conf File support and Options dialog added
2009-11-16 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * Version 0.1 released
2009-10-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
         * First upload