@@ -1212,7 +1212,7 @@
   <widget class="QPushButton" name="pushButton_7">
    <property name="geometry">
     <rect>
-     <x>540</x>
+     <x>510</x>
      <y>70</y>
      <width>120</width>
      <height>30</height>
@@ -1228,7 +1228,7 @@
   <widget class="QPushButton" name="pushButton_8">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>380</x>
      <y>70</y>
      <width>120</width>
      <height>30</height>
