@@ -1,4 +1,8 @@
 2010-05-13 Ali Erkan İMREK <alierkanimrek.gmail.com>
+    * perobuilder.py: Repo dir couldn't be create if iso root is exist, fixed.
+    * constants.py and isobuilder.py: license Dir added to build process.
+    * Tiny gui corrections
+2010-05-13 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * prepareIface.py: Issue 6 fixed.
 2010-04-25 Version 0.3.3 Released
     * Paso information update is provided
